--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,11 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# extra
+.idea/
+.mvn/
+HELP.md
+mvnw
+mvnw.cmd
+springcloud-template.iml
